      searching back in the history of that label. (CNY-1312)
    * Added moveComponents and copyComponents to group syntax. (CNY-1231)
    * Derived packages (experimental) can now change files between
      Config, InitialContents, and Transient, and can set new files
      to be any of those types.  They can call UtilizeUser and
      UtilizeGroup. (CNY-1283)
    * Derived packages (experimental) can now create hard links, including
      adding new files to existing link groups. (CNY-1284)
    * Derived packages (experimental) now inherit byDefault settings from
      the parent (CNY-1401), but can override them in the child (CNY-1283).

  o Server Changes:
    * Two new calls have been added to the server API -
      getTroveReferences and getTroveDescendants (CNY-1349)
    * Proxy server proxies put calls now
    * Cleaned up string compression code in changeset merging

  o Bug Fixes:
    * Fixed a bug where an invalid flavor at the command line would result
      in a traceback. (CNY-1070)
    * Added an exception to allow redirect recipe names to have any format -
      including those usually reserved for group- and info- packages.
    * Removed a harmful assert that kept trove source stacks from working w/o
      installLabelPaths in some cases. (CNY-1351)
    * The cfg.root item is always stored internally as an absolute path,
      even if it is specified as a relative path. (CNY-1276)
    * cvc now properly cleans up 000-permission files from the old build 
      directory. (CNY-1359)

  o Internal Changes:
    * Changesets in an update job can be downloaded in a step separate from
      the installation. Additionally, update jobs can be frozen and reapplied
      later. (CNY-1300)
    * Public keys can now be retrieved from a directory, with each key stored
      in a separate file. (CNY-1299)
    * Troves now track their direct parent they were cloned from, instead of
      the source-of-all-clones. (CNY-1294)

Changes in 1.1.17:
  o New Feature: